# satori-net

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/net_core/: Cargo.toml
crates/net_core/.claude/: settings.local.json
crates/net_core/src/: lib.rs  main.rs
