[package]
name = "bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bootstrap server for satori-net peer discovery"
keywords = ["p2p", "networking", "peer-discovery"]
categories = ["network-programming"]

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wintun = "0.5.1"
etherparse = "0.20.1"
