[package]
name = "bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bootstrap server for satori-net peer discovery"
keywords = ["p2p", "networking", "peer-discovery"]
categories = ["network-programming"]

[dependencies]
axum = "0.8.9"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
