[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for satori-net"
keywords = ["p2p", "networking", "vpn", "cli"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
net_core = { path = "../net_core" }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
tokio = { workspace = true }
tun-rs = { version = "2", features = ["async"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
netdev = "0.42.0"
winroute = "0.2.3"
