[package]
name = "net_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core peer-to-peer networking library with X25519 + ChaCha20-Poly1305 encrypted sessions"
keywords = ["p2p", "networking", "encryption", "tokio", "async"]
categories = ["network-programming", "cryptography", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["full"] }
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
public-ip-address = "0.4.0"
reqwest = { version = "0.12", features = ["json"] }
etherparse = "0.20.1"
rand = "0.10.1"
tun-rs = { version = "2", features = ["async"] }
netdev = "0.42.0"
winroute = "0.2.3"
